--- a/annotation_tools/templates/layout.html
+++ b/annotation_tools/templates/layout.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}">
 
   {% block head %}
-  <title>{% block title %}{% endblock %} - VAT</title>
+  <title>{% block title %}{% endblock %} - Remote Annotator</title>
   {% endblock %}
 </head>
 
